--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -8,7 +8,9 @@ on:
     paths:
       - 'frontend/**'
 
-  workflow_dispatch:
+env:
+  # Set Node.js Version
+  NODE_VERSION: '16.x'
 
 #Use a matrix strategy to use Node.js versions 16.x and 18.x
 jobs:
@@ -17,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: ${{env.NODE_VERSION}}
 
     steps:
       # Check out the code from the repository.
@@ -26,7 +28,7 @@ jobs:
       # Set up a Node.js environment using the specified node version.
       - uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: "16.x"
 
       # Install the dependencies.
       - run: cd frontend && npm ci
