--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -27,7 +27,7 @@ jobs:
 
       - run: cd backend && pip install --user pipenv
 
-      - run : cd backend && pipenv install
+      - run : cd backend && pipenv sync
 
       # Run the linter.
       - run: cd backend && pipenv run lint
@@ -53,7 +53,7 @@ jobs:
 
       - run: cd backend && pip install --user pipenv
 
-      - run : cd backend && pipenv install
+      - run : cd backend && pipenv sync
 
       # Run the linter.
       - run: cd backend && pipenv run test
