--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -5,8 +5,8 @@ on:
   push:
     branches:
       - master
-    paths:
-      - 'backend/**'
+#    paths:
+#      - 'backend/**'
 
 #Use a matrix strategy to use Node.js versions 16.x and 18.x
 jobs:
@@ -30,7 +30,7 @@ jobs:
       - run : cd backend && pipenv sync
 
       # Run the linter.
-      - run: cd backend && pipenv run lint
+      - run: cd backend && pipenv shell && pipenv run lint
 
       # Send a console message at completion.
       - run: |
