--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -27,10 +27,10 @@ jobs:
 
       - run: cd backend && pip install --user pipenv
 
-      - run : cd backend && pipenv sync
+      - run : cd backend && pipenv sync && pip show -f flake8
 
       # Run the linter.
-      - run: cd backend && pipenv shell && pipenv run lint
+      - run: cd backend && pipenv run lint
 
       # Send a console message at completion.
       - run: |
