--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -5,8 +5,8 @@ on:
   push:
     branches:
       - master
-#    paths:
-#      - 'backend/**'
+    paths:
+      - 'backend/**'
 
 #Use a matrix strategy to use Node.js versions 16.x and 18.x
 jobs:
