--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -5,8 +5,8 @@ on:
   push:
     branches:
       - master
-    paths:
-      - 'frontend/**'
+#    paths:
+#      - 'frontend/**'
 
 env:
   # Set Node.js Version
@@ -16,10 +16,6 @@ env:
 jobs:
   lint:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: ${{env.NODE_VERSION}}
 
     steps:
       # Check out the code from the repository.
@@ -43,10 +39,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [ 16.x, 18.x ]
-
     steps:
       # Check out the code from the repository.
       - uses: actions/checkout@v3
@@ -54,7 +46,7 @@ jobs:
       # Set up a Node.js environment using the specified node version.
       - uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: "16.x"
 
       # Install the dependencies.
       - run: cd frontend && npm ci
