--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -52,7 +52,7 @@ jobs:
       - run: cd frontend && npm ci
 
       # Run the tests.
-      - run: cd frontend && npm test
+      - run: cd frontend && npm test --passWithNoTests
 
       # Send a console message at completion.
       - run: |
