--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -1,12 +1,15 @@
 name: ci-backend-workflow
 
-# Ensure the workflow runs on schedule (Sunday at 0:00) and on push to the main branch
 on:
+  # Manual trigger using the workflow_dispatch event
+  workflow_dispatch:
+
+  # Automatic trigger on push events to the main branch
   push:
     branches:
       - master
-    paths:
-      - 'backend/**'
+#    paths:
+#      - 'backend/**'
 
 #Use a matrix strategy to use Node.js versions 16.x and 18.x
 jobs:
@@ -27,7 +30,7 @@ jobs:
 
       - run: cd backend && pip install pipenv
 
-      - run : cd backend && pipenv install --dev
+      - run: cd backend && pipenv install --dev
 
       # Run the linter.
       - run: cd backend && pipenv run lint
@@ -53,7 +56,7 @@ jobs:
 
       - run: cd backend && pip install --user pipenv
 
-      - run : cd backend && pipenv sync
+      - run: cd backend && pipenv sync
 
       # Run the linter.
       - run: cd backend && pipenv run test
@@ -62,14 +65,28 @@ jobs:
       - run: |
           echo "Hello ${{github.actor}}. You pushed to ${{github.repository}} at $(date)."
 
-        #  build:
-        #    needs: [ lint, test ]
-        #    runs-on: ubuntu-latest
-        #    steps:
-        #      - name: Publish test results
-        #        uses: actions/upload-artifact@v3
-        #        with:
-        #          name: test-results
-        #          path: test-results.xml
+  build:
+    needs: [ lint,test ]
+    runs-on: ubuntu-latest
 
-        
+    steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
+          aws-region: us-east-1
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
+      - name: Build, tag, and push docker image to Amazon ECR
+        env:
+          REGISTRY: 570414064424.dkr.ecr.us-east-1.amazonaws.com
+          REPOSITORY: movie-frontend
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          docker build -t movie-frontend .
+          docker push 570414064424.dkr.ecr.us-east-1.amazonaws.com/movie-frontend:latest
