--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -1,16 +1,15 @@
 name: ci-frontend-workflow
 
-# Ensure the workflow runs on schedule (Sunday at 0:00) and on push to the main branch
 on:
+  # Manual trigger using the workflow_dispatch event
+  workflow_dispatch:
+
+  # Automatic trigger on push events to the main branch
   push:
     branches:
       - master
-#    paths:
-#      - 'frontend/**'
-
-env:
-  # Set Node.js Version
-  NODE_VERSION: '16.x'
+    paths:
+      - 'frontend/**'
 
 #Use a matrix strategy to use Node.js versions 16.x and 18.x
 jobs:
@@ -25,6 +24,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "16.x"
+
+      # clear cache
+      - run: cd frontend && npm cache clean --force
 
       # Install the dependencies.
       - run: cd frontend && npm ci
@@ -47,6 +49,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "16.x"
+
+      # clear cache
+      - run: cd frontend && npm cache clean --force
 
       # Install the dependencies.
       - run: cd frontend && npm ci
