--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -91,4 +91,4 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
         run: |
           cd backend && docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-          cd backend && docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
