updated repo url in backend-ci.yaml

--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -87,7 +87,7 @@ jobs:
       - name: Build, tag, and push docker image to Amazon ECR
         env:
           REGISTRY: 570414064424.dkr.ecr.us-east-1.amazonaws.com
-          REPOSITORY: movie-frontend
+          REPOSITORY: movie-backend
           IMAGE_TAG: ${{ github.sha }}
         run: |
           cd backend && docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
