updated repo url in backend-ci.yaml

--- a/.github/workflows/backend-cd.yaml
+++ b/.github/workflows/backend-cd.yaml
@@ -1,4 +1,4 @@
-name: ci-backend-workflow
+name: cd-backend-workflow
 
 on:
   # Manual trigger using the workflow_dispatch event
@@ -8,8 +8,8 @@ on:
   push:
     branches:
       - master
-#    paths:
-#      - 'backend/**'
+    paths:
+      - 'backend/**'
 
 #Use a matrix strategy to use Node.js versions 16.x and 18.x
 jobs:
@@ -84,10 +84,33 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build, tag, and push docker image to Amazon ECR
+      - name: Build docker image
         env:
           REGISTRY: 570414064424.dkr.ecr.us-east-1.amazonaws.com
           REPOSITORY: movie-backend
           IMAGE_TAG: ${{ github.sha }}
         run: |
           cd backend && docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+  
+
+  deploy:
+    needs: [ lint,test, build ]
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
+          aws-region: us-east-1
+
+      - run: aws eks update-kubeconfig
+
+      - run: cd backend/k8s && kustomize edit set image frontend=<ECR_REPO_URL>:<NEW_TAG_HERE>
+
+      - run: cd backend/k8s && kustomize build | kubectl apply -f -
