--- a/.github/workflows/backend-cd.yaml
+++ b/.github/workflows/backend-cd.yaml
@@ -8,8 +8,8 @@ on:
   push:
     branches:
       - master
-    paths:
-      - 'backend/**'
+#    paths:
+#      - 'backend/**'
 
 #Use a matrix strategy to use Node.js versions 16.x and 18.x
 jobs:
@@ -77,7 +77,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
+#          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
           aws-region: us-east-1
 
       - name: Login to Amazon ECR
@@ -106,11 +106,17 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
+#          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
           aws-region: us-east-1
 
       - run: aws eks update-kubeconfig
 
-      - run: cd backend/k8s && kustomize edit set image frontend=<ECR_REPO_URL>:<NEW_TAG_HERE>
+      - name: Deploy Image
+        env:
+          REGISTRY: 570414064424.dkr.ecr.us-east-1.amazonaws.com
+          REPOSITORY: movie-backend
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          cd backend && kustomize edit set image backend=$REGISTRY/$REPOSITORY:$IMAGE_TAG
 
       - run: cd backend/k8s && kustomize build | kubectl apply -f -
