--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -8,8 +8,8 @@ on:
   push:
     branches:
       - master
-#    paths:
-#      - 'backend/**'
+    paths:
+      - 'backend/**'
 
 #Use a matrix strategy to use Node.js versions 16.x and 18.x
 jobs:
@@ -72,22 +72,22 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
-          aws-region: us-east-1
+#      - name: Configure AWS Credentials
+#        uses: aws-actions/configure-aws-credentials@v2
+#        with:
+#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
+#          aws-region: us-east-1
+#
+#      - name: Login to Amazon ECR
+#        id: login-ecr
+#        uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Build, tag, and push docker image to Amazon ECR
-        env:
-          REGISTRY: 570414064424.dkr.ecr.us-east-1.amazonaws.com
-          REPOSITORY: movie-backend
-          IMAGE_TAG: ${{ github.sha }}
+      - name: Build Backend
+#        env:
+#          REGISTRY: 570414064424.dkr.ecr.us-east-1.amazonaws.com
+#          REPOSITORY: movie-backend
+#          IMAGE_TAG: ${{ github.sha }}
         run: |
-          cd backend && docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+          cd backend && docker build
