--- a/.github/workflows/frontend-cd.yaml
+++ b/.github/workflows/frontend-cd.yaml
@@ -107,7 +107,7 @@ jobs:
 #          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
           aws-region: us-east-1
 
-      - run: aws eks update-kubeconfig
+      - run: aws eks update-kubeconfig --name cluster
 
       - run: cd backend/k8s && kustomize edit set image frontend=$REGISTRY/$REPOSITORY:$IMAGE_TAG
 
