--- a/.github/workflows/frontend-cd.yaml
+++ b/.github/workflows/frontend-cd.yaml
@@ -85,7 +85,7 @@ jobs:
       - name: Build, tag, and push docker image to Amazon ECR
         env:
           REGISTRY: 570414064424.dkr.ecr.us-east-1.amazonaws.com
-          REPOSITORY: movie-frontend
+          REPOSITORY: frontend
           IMAGE_TAG: ${{ github.sha }}
           REACT_APP_MOVIE_API_URL: http://abc.com
         run: |
