--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -33,7 +33,7 @@ jobs:
       - run: cd backend && pipenv install --dev
 
       # Run the linter.
-      - run: cd backend && pipenv run lint
+      - run: cd backend && pipenv run lint .
 
       # Send a console message at completion.
       - run: |
