--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -11,7 +11,11 @@ on:
     paths:
       - 'frontend/**'
 
-#Use a matrix strategy to use Node.js versions 16.x and 18.x
+env:
+  # Setting an environment variable with the value of a configuration variable
+  FRONTEND_ECR_URL: ${{ vars.FRONTEND_ECR_URL }}
+  REACT_APP_MOVIE_API_URL: ${{ vars.REACT_APP_MOVIE_API_URL }}
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -84,24 +88,7 @@ jobs:
       # Run the tests.
       - run: cd frontend && npm run test
 
-#      - name: Configure AWS Credentials
-#        uses: aws-actions/configure-aws-credentials@v2
-#        with:
-#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
-#          aws-region: us-east-1
-#
-#      - name: Login to Amazon ECR
-#        id: login-ecr
-#        uses: aws-actions/amazon-ecr-login@v2
-
       - name: Build Application
-        env:
-#          REGISTRY: 570414064424.dkr.ecr.us-east-1.amazonaws.com
-#          REPOSITORY: movie-frontend
-#          IMAGE_TAG: ${{ github.sha }}
-          REACT_APP_MOVIE_API_URL: http://abc.com
         run: |
           cd frontend && docker build --build-arg REACT_APP_MOVIE_API_URL=$REACT_APP_MOVIE_API_URL
 
