--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -11,7 +11,10 @@ on:
     paths:
       - 'backend/**'
 
-#Use a matrix strategy to use Node.js versions 16.x and 18.x
+env:
+  # Setting an environment variable with the value of a configuration variable
+  BACKEND_ECR_URL: ${{ vars.BACKEND_ECR_URL }}
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -26,18 +29,17 @@ jobs:
           python-version: "3.10"
 
       # Install the dependencies.
-      - run: cd backend && python -m pip install --upgrade pip
-
-      - run: cd backend && pip install pipenv
-
-      - run: cd backend && pipenv install --dev
+      - run: |
+          cd backend && python -m pip install --upgrade pip
+          pip install pipenv
+          pipenv install --dev
 
       # Run the linter.
       - run: cd backend && pipenv run lint .
 
       # Send a console message at completion.
       - run: |
-          echo "Hello ${{github.actor}}. You pushed to ${{github.repository}} at $(date)."
+          echo "Lint Stage Completed"
 
   test:
     runs-on: ubuntu-latest
@@ -52,18 +54,17 @@ jobs:
           python-version: "3.10"
 
       # Install the dependencies.
-      - run: cd backend && python -m pip install --upgrade pip
-
-      - run: cd backend && pip install --user pipenv
-
-      - run: cd backend && pipenv sync
+      - run: |
+          cd backend && python -m pip install --upgrade pip
+          pip install pipenv
+          pipenv install --dev
 
       # Run the linter.
       - run: cd backend && pipenv run test
 
       # Send a console message at completion.
       - run: |
-          echo "Hello ${{github.actor}}. You pushed to ${{github.repository}} at $(date)."
+          echo "Test Stage Completed"
 
   build:
     needs: [ lint,test ]
@@ -72,22 +73,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-#      - name: Configure AWS Credentials
-#        uses: aws-actions/configure-aws-credentials@v2
-#        with:
-#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
-#          aws-region: us-east-1
-#
-#      - name: Login to Amazon ECR
-#        id: login-ecr
-#        uses: aws-actions/amazon-ecr-login@v2
-
+      # Build Backend
       - name: Build Backend
-#        env:
-#          REGISTRY: 570414064424.dkr.ecr.us-east-1.amazonaws.com
-#          REPOSITORY: movie-backend
-#          IMAGE_TAG: ${{ github.sha }}
         run: |
           cd backend && docker build
