--- a/.github/workflows/frontend-cd.yaml
+++ b/.github/workflows/frontend-cd.yaml
@@ -11,7 +11,11 @@ on:
 #    paths:
 #      - 'frontend/**'
 
-#Use a matrix strategy to use Node.js versions 16.x and 18.x
+env:
+  # Setting an environment variable with the value of a configuration variable
+  FRONTEND_ECR_URL: ${{ vars.FRONTEND_ECR_URL }}
+  REACT_APP_MOVIE_API_URL: ${{ vars.REACT_APP_MOVIE_API_URL }}
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -75,7 +79,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: ${{ vars.AWS_REGION }}
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -83,13 +87,10 @@ jobs:
 
       - name: Build, tag, and push docker image to Amazon ECR
         env:
-          REGISTRY: 570414064424.dkr.ecr.us-east-1.amazonaws.com
-          REPOSITORY: frontend
           IMAGE_TAG: ${{ github.sha }}
-          REACT_APP_MOVIE_API_URL: http://abc.com
         run: |
-          cd frontend && docker build --build-arg REACT_APP_MOVIE_API_URL=$REACT_APP_MOVIE_API_URL -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          cd frontend && docker build --build-arg REACT_APP_MOVIE_API_URL=$REACT_APP_MOVIE_API_URL -t $FRONTEND_ECR_URL:$IMAGE_TAG .
+          docker push $FRONTEND_ECR_URL:$IMAGE_TAG
 
   deploy:
     needs: [ lint,test, build ]
@@ -103,18 +104,17 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: ${{ vars.AWS_REGION }}
 
       - run: aws eks update-kubeconfig --name cluster
 
-      - name: Deploy Image
+      - name: Deploy Frontend
         env:
           REGISTRY: 570414064424.dkr.ecr.us-east-1.amazonaws.com
           REPOSITORY: frontend
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          cd frontend/k8s && kustomize edit set image frontend=$REGISTRY/$REPOSITORY:$IMAGE_TAG
-
-      - run: cd frontend/k8s && kustomize build | kubectl apply -f -
+          cd frontend/k8s && kustomize edit set image frontend=$FRONTEND_ECR_URL:$IMAGE_TAG
+          kustomize build | kubectl apply -f -
 
         
