Added terraform files

--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -37,7 +37,7 @@ jobs:
       # Run the linter.
       - run: cd backend && pipenv run lint .
 
-      # Send a console message at completion.
+      # Send a console message at completion
       - run: |
           echo "Lint Stage Completed"
 
