--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -76,4 +76,5 @@ jobs:
       # Build Backend
       - name: Build Backend
         run: |
-          cd backend && docker build
+          cd backend
+          docker build
